2005-06-21 Duncan Coutts <duncan@coutts.uklinux.net>

	* AUTHORS: note that Axel is author and developer and that Duncan is
	current maintainer. Apparently this better reflects reality.

	* demo/fastdraw/FastDraw.hs: change fastdraw demo to add more
	comments and make it compile with -O by default (which makes a large
	difference). Use a faster looping construct and add a comment
	mentioning that GHC is better at optimising the doFromTo kind of loop
	than the "sequence_ [ ... | x <- ... ]" kind of loop.

2005-06-20 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Entry/EntryCompletion.chs.pp: change the return
	type of entryCompletionGetEntry back to what it was previously which
	is what it should be. It must have been accidentally changed in a
	over-zelous merge from the generated modules. Found this accidental
	change using new apidiff tool.

	* gtk/Graphics/UI/Gtk/Gdk/Events.hsc: export the Modifier data
	constructors and make it an instance of Eq, but Show is probably not
	necessary.

	* gtk/Graphics/UI/Gtk/Gdk/DrawWindow.chs.pp,
	gtk/Graphics/UI/Gtk/Gdk/Drawable.chs.pp,
	gtk/Graphics/UI/Gtk/Gdk/GC.chs, gtk/Graphics/UI/Gtk/Gdk/Gdk.chs,
	gtk/Graphics/UI/Gtk/Gdk/Keys.chs,
	gtk/Graphics/UI/Gtk/Gdk/Pixbuf.chs.pp,
	gtk/Graphics/UI/Gtk/Gdk/Region.chs.pp: tidy up the haddock header
	docs. Move the TODO items so they don't appear in the generated docs.
	
	* configure.ac: Bump version to 0.9.8.

2005-06-18 Duncan Coutts <duncan@coutts.uklinux.net>

	* acinclude.m4: fix file name quoting in the .cabal files so that
	paths with spaces in get read properly.

	* gconf/gconf.cabal.in, glade/glade.cabal.in, glib/glib.cabal.in
	gtk/gtk.cabal.in, mogul/mogul.cabal.in, mozembed/mozembed.cabal.in
	sourceview/sourceview.cabal.in: put the import-dirs value in "" quotes
	so that paths with spaces in get read properly (fixes installing on
	Windows with GHC 6.4 and the default install location of "C:/Program